Fixing Add/Edit Label button visibility

--- a/Packages/ohif-measurements/client/components/measureFlow/measureFlow.styl
+++ b/Packages/ohif-measurements/client/components/measureFlow/measureFlow.styl
@@ -12,8 +12,9 @@
   &.selected
 
     .btn-add
-      opacity: 0
-      outline: none
+      opacity: 0 !important
+      outline: none !important
+      pointer-events: none !important
 
   .btn-add
     outline: none
